hydroflow/tests/compile-fail/surface_singleton_nostate.stderr
error: Cannot reference operator `null`. Only operators with singleton state can be referenced.
 --> tests/compile-fail/surface_singleton_nostate.rs:7:41
  |
7 |             -> filter(|value| value <= #my_ref.as_reveal_ref())
  |                                         ^^^^^^
